# xdmf

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  cells.txt  coords.txt  sample.xdmf  time_series_writer.xdmf2
.config/: nextest.toml
.github/workflows/: rust.yml
src/: ascii_writer.rs  attribute.rs  hdf5_writer.rs  lib.rs  main.rs  time_series_writer.rs  values.rs  xdmf_elements.rs  xml_writer.rs
src/xdmf_elements/: attribute.rs  data_item.rs  dimensions.rs  geometry.rs  grid.rs  topology.rs
tests/: time_series_writer.rs  vtk_comparison.rs  xdmf_elements.rs
tests/elements/: basic_grid.rs
tests/xdmf_elements/: hierarchical_tree_grid.rs  mixed_grid.rs  spatial_collection_grid.rs  temporal_collection_grid.rs
xdmf/: Cargo.toml
xdmf/src/: data.rs  hdf5_writer.rs  lib.rs  values.rs  xml_writer.rs
xdmf/tests/: time_series_writer.rs
xdmf_elements/: Cargo.toml
xdmf_elements/src/: attribute.rs  data_item.rs  dimensions.rs  geometry.rs  grid.rs  lib.rs  topology.rs
xdmf_elements/tests/: basic_grid.rs  hierarchical_tree_grid.rs  mixed_grid.rs  spatial_collection_grid.rs  temporal_collection_grid.rs
