[package]
authors = ["Philipp Bucher"]
categories = ["science", "simulation", "visualization"]
description = "Small library to write XDMF files for Paraview"
edition = "2024"
keywords = ["xdmf", "paraview", "hpc", "postprocessing", "io"]
license = "MIT"
name = "xdmf"
repository = "https://github.com/philbucher/xdmf"
version = "0.1.0"

[features]
default = ["hdf5"]
hdf5 = ["dep:hdf5"]
mpi = ["dep:mpi", "hdf5/mpio"]
unstable-submesh-api = []

[dependencies]
hdf5 = { package = "hdf5-metno", version = "0.10.1", optional = true }
mpi = { version = "0.8.0", features = [
    "user-operations",
    "derive",
], optional = true }
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
float-cmp = "0.10.0"
pretty_assertions = "1.4.1"
temp-dir = "0.1.16"

[lints.clippy]
missing_errors_doc="deny"
match_bool="deny"
doc_markdown="deny"
unnecessary_wraps="deny"
cfg_not_test="deny"
assertions_on_result_states="deny"
bool_to_int_with_if="deny"
dbg_macro="deny"
default_trait_access="deny"
doc_link_with_quotes="deny"
expect_used="deny"
explicit_into_iter_loop="deny"
explicit_iter_loop="deny"
field_scoped_visibility_modifiers="deny"
float_cmp="deny"
float_cmp_const="deny"
format_collect="deny"
flat_map_option="deny"
get_unwrap="deny"
if_not_else="deny"
if_then_some_else_none="deny"
ignore_without_reason="deny"
ignored_unit_patterns="deny"
# redundant_test_prefix="deny"
inefficient_to_string="deny"
infinite_loop="deny"
iter_filter_is_ok="deny"
iter_filter_is_some="deny"
large_stack_arrays="deny"
large_types_passed_by_value="deny"
lossy_float_literal="deny"
macro_use_imports="deny"
manual_assert="deny"
manual_instant_elapsed="deny"
manual_let_else="deny"
manual_string_new="deny"
map_err_ignore="deny"
map_unwrap_or="deny"
missing_panics_doc="deny"
mod_module_files="deny"
multiple_crate_versions="deny"
multiple_inherent_impl="deny"
needless_continue="deny"
needless_for_each="deny"
non_std_lazy_statics="deny"
option_as_ref_cloned="deny"
panic="deny"
panic_in_result_fn="deny"
print_stderr="deny"
print_stdout="deny"
pub_underscore_fields="deny"
rc_mutex="deny"
redundant_else="deny"
redundant_type_annotations="deny"
ref_option="deny"
ref_option_ref="deny"
ref_patterns="deny"
renamed_function_params="deny"
return_and_then="deny"
same_functions_in_if_condition="deny"
unseparated_literal_suffix="deny"
should_panic_without_expect="deny"
single_char_pattern="deny"
stable_sort_primitive="deny"
str_split_at_newline="deny"
string_lit_chars_any="deny"
string_to_string="deny"
struct_field_names="deny"
# tests_outside_test_module="deny"
unchecked_duration_subtraction="deny"
unnecessary_box_returns="deny"
uninlined_format_args="deny"
unnecessary_debug_formatting="deny"
unnecessary_join="deny"
unnecessary_literal_bound="deny"
unnested_or_patterns="deny"
unreadable_literal="deny"
unused_async="deny"
unwrap_in_result="deny"
unwrap_used="deny"
used_underscore_binding="deny"
used_underscore_items="deny"
use_debug="deny"