[package]
authors = ["Philipp Bucher"]
categories = ["science", "simulation", "visualization"]
description = "Small library to write XDMF files for Paraview"
edition = "2024"
keywords = ["xdmf", "paraview", "hpc", "postprocessing", "io"]
license = "MIT"
name = "xdmf"
repository = "https://github.com/philbucher/xdmf"
version = "0.1.0"

[features]
default = ["hdf5"]
hdf5 = ["dep:hdf5"]
mpi = ["dep:mpi", "hdf5/mpio"]
unstable-submesh-api = []

[dependencies]
hdf5 = { package = "hdf5-metno", version = "0.10.1", optional = true }
mpi = { version = "0.8.0", features = [
    "user-operations",
    "derive",
], optional = true }
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
float-cmp = "0.10.0"
pretty_assertions = "1.4.1"
temp-dir = "0.1.16"

[lints.clippy]
missing_errors_doc = "warn"
match_bool = "warn"
doc_markdown = "warn"
unnecessary_wraps = "warn"
cfg_not_test = "warn"
assertions_on_result_states = "warn"
bool_to_int_with_if = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
doc_link_with_quotes = "warn"
expect_used = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
field_scoped_visibility_modifiers = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
format_collect = "warn"
flat_map_option = "warn"
get_unwrap = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
ignored_unit_patterns = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_unwrap_or = "warn"
missing_panics_doc = "warn"
mod_module_files = "warn"
multiple_crate_versions = "warn"
multiple_inherent_impl = "warn"
needless_continue = "warn"
needless_for_each = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_underscore_fields = "warn"
rc_mutex = "warn"
redundant_else = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_option = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
unseparated_literal_suffix = "warn"
should_panic_without_expect = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
struct_field_names = "warn"
unchecked_duration_subtraction = "warn"
unnecessary_box_returns = "warn"
uninlined_format_args = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
use_debug = "warn"
