[package]
name = "xdmf"
version = "0.1.0"
edition = "2024"

[features]
default = ["hdf5"]
hdf5 = ["dep:hdf5"]
mpi = ["dep:mpi", "hdf5/mpio"]

[dependencies]
xdmf_elements = { path = "../xdmf_elements" }
itertools = "0.14.0"
ndarray = { version = "0.16.1", default-features = false }
hdf5 = { package = "hdf5-metno", version = "0.10.1", optional = true }
mpi = { version = "0.8.0", features = [
    "user-operations",
    "derive",
], optional = true }
