[package]
authors.workspace = true
categories.workspace = true
description = ""
edition.workspace = true
name = "xdmf_elements"
version.workspace = true

[dependencies]
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions.workspace = true
